--- a/Web07_Login/WebContent/WEB-INF/web.xml
+++ b/Web07_Login/WebContent/WEB-INF/web.xml
@@ -15,5 +15,27 @@
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
-  
+  <!-- 인코딩 필터 정의하기(Tomcat 웹서버에 알리기) -->
+	<filter>
+		<filter-name>EncodingFilter</filter-name>
+		<filter-class>test.filter.EncodingFilter</filter-class>
+		
+		<!-- 필터 초기화 파라미터 정의하기 encoding : utf-8
+			init-param을 써놓는 것만으로 읽어들여서 바로 인코딩을 바꿔준다. Class로 만들어서 하는것보다 간단하기 때문에 사용한다.
+		-->
+		
+		<init-param>
+			<!-- //초기 파라미터 키값, 벨류값 형식으로 저장할수있음 -->
+			
+			<param-name>encoding</param-name>
+			<param-value>utf-8</param-value>
+		</init-param>
+	</filter>
+	<!-- 인코딩 필터 맵핑하기(어떤 요청에 대해서 필터가 동작할지 알리기 -->
+	<filter-mapping>
+		<filter-name>EncodingFilter</filter-name>
+		<!-- Webcontent(최상위경로) 하위의 모든 요청에 대해서 -->
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 </web-app>
